# marimo-widgets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  hello.py  ideas.md  package.json  paradigm.md  pyproject.toml  roadmap.md  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  widget_request.yml
examples/: showcase_v0.1.0.py  showcase_v0.1.py
src/mowidget/base/: dummy.py  string_form.py
src/mowidget/base/dummy/: dummy.css  dummy.js
src/mowidget/design/: color_matrix.py  color_picker.py
src/mowidget/design/color-matrix/: color-matrix.js
src/mowidget/frontend/css/: doc-viewer.css
src/mowidget/layout/: header.py
src/mowidget/layout/header/: notebook-header.css  notebook-header.js
src/mowidget/productivity/: pomodoro_timer.py
src/mowidget/productivity/pomodoro-timer/: pomodoro-timer.css  pomodoro-timer.js
src/mowidget/viewer/: array_viewer.py
tests/test_base/: test_dummy.py  test_string_form.py
tests/test_design/: test_color_matrix.py  test_color_picker.py
tests/test_layout/: test_header.py
tests/test_productivity/: test_pomodoro_timer.py
tests/test_viewer/: test_array_viewer.py
